tests/baselines/reference/verbatimModuleSyntaxCompat4.errors.txt
/tsconfig.json(4,9): error TS5104: Option 'isolatedModules' is redundant and cannot be specified with option 'verbatimModuleSyntax'.
/tsconfig.json(5,9): error TS5095: Option 'preserveValueImports' can only be used when 'module' is set to 'es2015' or later.
/tsconfig.json(5,9): error TS5101: Flag 'preserveValueImports' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
  Use 'verbatimModuleSyntax' instead.
/tsconfig.json(5,9): error TS5104: Option 'preserveValueImports' is redundant and cannot be specified with option 'verbatimModuleSyntax'.
/tsconfig.json(6,9): error TS5101: Flag 'importsNotUsedAsValues' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
  Use 'verbatimModuleSyntax' instead.
/tsconfig.json(6,9): error TS5104: Option 'importsNotUsedAsValues' is redundant and cannot be specified with option 'verbatimModuleSyntax'.


==== /tsconfig.json (6 errors) ====
    {
        "extends": "./tsconfig.base.json",
        "compilerOptions": {
            "isolatedModules": true,
            ~~~~~~~~~~~~~~~~~
!!! error TS5104: Option 'isolatedModules' is redundant and cannot be specified with option 'verbatimModuleSyntax'.
            "preserveValueImports": true,
            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS5095: Option 'preserveValueImports' can only be used when 'module' is set to 'es2015' or later.
            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS5101: Flag 'preserveValueImports' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
!!! error TS5101:   Use 'verbatimModuleSyntax' instead.
            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS5104: Option 'preserveValueImports' is redundant and cannot be specified with option 'verbatimModuleSyntax'.
            "importsNotUsedAsValues": "error",
            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS5101: Flag 'importsNotUsedAsValues' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
!!! error TS5101:   Use 'verbatimModuleSyntax' instead.
            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS5104: Option 'importsNotUsedAsValues' is redundant and cannot be specified with option 'verbatimModuleSyntax'.
        }
    }
==== /tsconfig.base.json (0 errors) ====
    {
        "compilerOptions": {
            "verbatimModuleSyntax": true
        }
    }
==== /index.ts (0 errors) ====
    